anna done up to appendix H

--- a/AppOutput/Methodology/bc_components.tex
+++ b/AppOutput/Methodology/bc_components.tex
@@ -1,26 +1,26 @@
-\begin{tabular}{l l p{2cm}}
-\hline\hline			
-Variable & Sign Reversed	& Welfare Cost Factor \\
-\hline
-\emph{Benefits} 	\\			
-Parent Income			& No \\
-Subject QALY			& No \\
-Subject Labor Income	& No \\
-Subject Transfer Income	& Yes	& 0.5 \\
-Medicare Costs			& Yes	& 1.5 \\
-Medicaid Costs			& Yes	& 1.5 \\
-Out-of-pocket Medical Costs	& Yes \\
-Miscellaneous medical Costs	& Yes \\
-Disability Insurance Claim	& Yes	&	1.5 \\
-Social Security Claim	& Yes	&	1.5 \\
-Supplemental Security Claim	& Yes	&	1.5 \\
-Control Contamination Costs	& Yes	& \\
-Education Costs			& Yes	& 1.5$^{*}$ \\
-Justice System Costs	& Yes	& 1.5 \\
-Prison Costs			& Yes	& 1.5 \\
-Victimization Costs		& Yes	& \\
-\\
-\emph{Costs} 	\\			
-Program Costs			& No \\
-\hline\hline			
+\begin{tabular}{l c c}
+\toprule			
+Variable & Sign Reversed	& Welfare Cost \\
+	&		& Factor \\
+\midrule
+\textbf{Benefits} 	\\			
+\quad Parent Income			& \\
+\quad Subject QALY			& \\
+\quad Subject Labor Income	& \\
+\quad Subject Public-transfer Income	& $\checkmark$	& 0.5 \\
+\quad Medicare Costs			& $\checkmark$	& 1.5 \\
+\quad Medicaid Costs			& $\checkmark$	& 1.5 \\
+\quad Out-of-pocket Medical Costs	& $\checkmark$ \\
+\quad Miscellaneous Medical Costs	& $\checkmark$ \\
+\quad Disability Insurance Claim	& $\checkmark$	&	1.5 \\
+\quad Social Security Claim	& $\checkmark$	&	1.5 \\
+\quad Supplemental Security Claim	& $\checkmark$	&	1.5 \\
+\quad Control Substitution Costs	& $\checkmark$	& \\
+\quad Education Costs			& $\checkmark$	& 1.5* \\
+\quad Justice System Costs	& $\checkmark$	& 1.5 \\
+\quad Prison Costs			& $\checkmark$	& 1.5 \\
+\quad Victimization Costs		& $\checkmark$	& \\
+\textbf{Costs} 	\\			
+\quad Program Costs			& \\
+\bottomrule			
 \end{tabular}
