--- a/AppOutput/Methodology/model_select_male.tex
+++ b/AppOutput/Methodology/model_select_male.tex
@@ -2,16 +2,16 @@
 % CAN BE COPIED INTO A SPREADSHEET PROGRAM (EXCEL, LIBRECALC) FOR EDITING
 \tiny
 \begin{tabular}{l r r l l l}
-\hline\hline											
+\toprule											
 Variable	&	Age	&	Obs.	&	(1)	&	(2)	&	(3)	\\
-\hline											
-Parent Labor Income	&	2	&	39	&	Subject Birth Year	&	Mother Works, age 3	&	Siblings in Household, age 3	\\
-Parent Labor Income	&	3	&	39	&	Subject Birth Year	&	Mother Works, age 3	&	Father works before pregnancy	\\
-Parent Labor Income	&	4	&	38	&	Subject Birth Year	&	Mother Works, age 4	&	Siblings in Household, age 3	\\
-Parent Labor Income	&	5	&	42	&	Mother Works, age 3	&	Mother Works, age 4	&	Siblings in Household, age 5	\\
-Parent Labor Income	&	9	&	42	&	Mother Works, age 3	&	Father home, age 5	&	Siblings in Household, age 5	\\
-Parent Labor Income	&	12	&	46	&	Subject Birth Year	&	Mother Works, age 4	&	Father home, age 5	\\
-Parent Labor Income	&	15	&	43	&	Mother Works, age 4	&	Father works before pregnancy	&	Siblings in Household, age 5	\\
+\midrule											
+Parental Labor Income	&	2	&	39	&	Subject Birth Year	&	Mother Works, age 3	&	Siblings in Household, age 3	\\
+Parental Labor Income	&	3	&	39	&	Subject Birth Year	&	Mother Works, age 3	&	Father works before pregnancy	\\
+Parental Labor Income	&	4	&	38	&	Subject Birth Year	&	Mother Works, age 4	&	Siblings in Household, age 3	\\
+Parental Labor Income	&	5	&	42	&	Mother Works, age 3	&	Mother Works, age 4	&	Siblings in Household, age 5	\\
+Parental Labor Income	&	9	&	42	&	Mother Works, age 3	&	Father home, age 5	&	Siblings in Household, age 5	\\
+Parental Labor Income	&	12	&	46	&	Subject Birth Year	&	Mother Works, age 4	&	Father home, age 5	\\
+Parental Labor Income	&	15	&	43	&	Mother Works, age 4	&	Father works before pregnancy	&	Siblings in Household, age 5	\\
 \\
 Subject Labor Income	&	21	&	45	&	HRI 10: Other special circumstances	&	Gestational Age $\leq$ 36	&	ASR t-score: Substance Abuse	\\
 Subject Labor Income	&	30	&	47	&	Father's Age at entry	&	Mother Married at entry	&	ASR t-score: Substance Abuse	\\
@@ -36,5 +36,5 @@ Severe Obesity (BMI $>$ 35)	&	Mid-30s	&	29	&	HRI 2: No Maternal Relatives	&	Moth
 Waist-hip Ratio	&	Mid-30s	&	25	&	Gestational Age $\leq$ 36	&	ASR t-score: Substance Abuse	&	Had physical exam for illness in last 2 years	\\
 Abdominal Obesity	&	Mid-30s	&	25	&	Gestational Age $\leq$ 36	&	ASR t-score: Substance Abuse	&	Had physical exam for illness in last 2 years	\\
 Framingham Risk Score	&	Mid-30s	&	27	&	Gestational Age $\leq$ 36	&	ASR t-score: Substance Abuse	&	Had physical exam for illness in last 2 years	\\
-\hline\hline																							
+\bottomrule																						
 \end{tabular}
