--- a/AppOutput/Methodology/nonipw_vars.tex
+++ b/AppOutput/Methodology/nonipw_vars.tex
@@ -1,11 +1,11 @@
 % CONTENT CREATED ON SPREADSHEET, TREAT AS A .CSV (TAB DELIMITED)
 % CAN BE COPIED INTO A SPREADSHEET PROGRAM (EXCEL, LIBRECALC) FOR EDITING
 \begin{tabular}{l l}
-\hline\hline			
+\toprule
 Variable	&	Age	\\
-\hline			
+\midrule			
 IQ Standard Score	&	2, 3, 4, 5, 6, 7, 8, 12, 15, 21	\\
-PIATH Math Standard Score	&	7	\\
+PIAT Math Standard Score	&	7	\\
 Home Total Score	&	0.5, 1.5, 2.5, 3.5, 4.5, 8	\\
 Mother Works	&	2, 3, 4, 5	\\
 Bio. Mother's Education Level	&	2, 3, 4, 5, 9	\\
@@ -15,14 +15,14 @@ Graduated High School	&	NA	\\
 Attended Vocation/Tech/Community College	&	NA	\\
 Earned Degree from 4-year College	&	NA	\\
 Years of Education	&	30	\\
-Works a job	&	30	\\
+Works a Job	&	30	\\
 Total Felony Arrests	&	Mid-30s	\\
 Total Misdemeanor Arrests	&	Mid-30s	\\
 Total Years Incarcerated	&	30	\\
 Self-reported Health	&	30	\\
-Number of cigarettes smoked per day last month	&	30	\\
-Number of days drank alcohol last month	&	30	\\
-Number of days binge drank alcohol last month	&	30	\\
+Number of Cigarettes Smoked Per Day Last Month	&	30	\\
+Number of Days Drank Alcohol Last Month	&	30	\\
+Number of Days Binge Drank Alcohol Last Month	&	30	\\
 Program Costs	&	0--26	\\
 Control Contamination Costs	&	0--26	\\
 Education Costs	&	0--26	\\
@@ -30,5 +30,5 @@ Medical Expenditure &	8--30	\\
 Justice System Costs	&	0--50	\\
 Prison Costs	&	0--50	\\
 Victimization Costs	&	0--50	\\
-\hline\hline			
+\bottomrule			
 \end{tabular}
