--- a/AppOutput/Program/progcost_app.tex
+++ b/AppOutput/Program/progcost_app.tex
@@ -1,11 +1,11 @@
 \begin{tabular}{L{9.5cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm}}
-\hline \hline 
-Treatment Component & Year 1& Year 2& Year 3& Year 4& Year 5 \\ \hline 
+\toprule
+Treatment Component & Year 1& Year 2& Year 3& Year 4& Year 5 \\ \midrule
 \textbf{Transportation to/from FPGC} &  \$645 	 & 	 \$626 	 & 	 \$608 	 & 	 \$508 	 & 	 \$493 	 \\ 
 \hspace{.2cm}Costs include the cost of fuel, insurance, drivers, and a transportation clerk. It should be noted that there is some evidence suggesting that there were other adults present to supervise children as they were being transported, but we do not account for this. & \\
 
 \textbf{Nutrition} &  \$408 	 & 	 \$1,602 	 & 	 \$1,945 	 & 	 \$1,888 	 & 	 \$1,833 	 \\ 
-\hspace{.2cm} Infants received iron-fortified formula for the first 15 months of life. After this, two meals and a snack daily were planned by a nutritionist and prepared off-site. Costs include the cost of food and preparation. & \\
+\hspace{.2cm} Infants received iron-fortified formula for the first 15 months of life. After this, children received two meals and a snack everyday planned by a nutritionist and prepared off-site. Costs include the cost of food and preparation. & \\
 
 \textbf{Well-child \& ill-child medical care} &  \$888 	 & 	 \$981 	 & 	 \$953 	 & 	 \$925 	 & 	 \$898 	 \\ 
 \hspace{.2cm} \textit{Well-child care} included: (i) complete medical exams at ages 2, 4, 6, 9, 12, and 24 months and yearly check-ups thereafter; (ii) standard immunizations; (iii) annual tests for vision, hearing, tuberculosis; and (iv) two tests for sickle cell anemia and hemocritis.  \textit{Ill-child care} included: daily surveillance for signs of illness, minor care on-site, and referral to a hospital if needed. & \\
@@ -22,5 +22,5 @@ Treatment Component & Year 1& Year 2& Year 3& Year 4& Year 5 \\ \hline
 
 \textbf{Total}  & \$19,536 	 & 	 \$18,204 	 & 	 \$20,186 	 & 	 \$19,238 	 & 	 \$18,678 	 \\ 
 
-\hline \hline
+\bottomrule
 \end{tabular}
