--- a/Appendices/ProgramCosts.tex
+++ b/Appendices/ProgramCosts.tex
@@ -4,7 +4,7 @@
 
 
 \begin{table}[H]
-\caption{ABC Treatment Costs per Child} \label{tab:treat-cost}
+\caption{ABC Treatment Costs per Subject} \label{tab:treat-cost}
 \centering
 \begin{adjustbox}{max width=\textwidth}
 \begin{threeparttable}
@@ -12,18 +12,18 @@
 \input{AppOutput/Program/progcost_app}
 \begin{tablenotes}
 \scriptsize
-\item Sources: \textbf{Treatment:} \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject}, \cite{Ramey_McGinness_etal_1982_Abecedarianapproach}, \cite{Clarke_Campbell_1998_ABC_Comparison_ECRQ}. \textbf{Costs:} \cite{Barnett_Masse_2002_benefitcost},  \cite{FPGC_Progress-Report_1973}, \cite{Cutler_Meara_1998_Med-Costs_BOOK}, \cite{Helburn_1995_Childcare-Report}, Quarterly Census of Employment and Wages (1975).
+\item Sources: \textbf{Treatment Component} \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject}; \cite{Ramey_McGinness_etal_1982_Abecedarianapproach}; \cite{Clarke_Campbell_1998_ABC_Comparison_ECRQ}. \textbf{Costs:} \cite{Barnett_Masse_2002_benefitcost}; \cite{FPGC_Progress-Report_1973}; \cite{Cutler_Meara_1998_Med-Costs_BOOK}; \cite{Helburn_1995_Childcare-Report}; Quarterly Census of Employment and Wages (1975).
 
-\item Note: this table summarizes the average cost per child (inflated to 2014 USD) of ABC treatment components.
+\item Note: This table summarizes the average cost per subject (inflated to 2014 USD) of ABC treatment components.
 \end{tablenotes}
 \end{threeparttable}
 \end{adjustbox}
 \end{table}
 
 \begin{comment}
-\subsection{Center-based Education, Child Care and Family Services} \label{sec:implementation}
+\subsection{Center-based Education, Childcare and Family Services} \label{sec:implementation}
 
-\noindent Only the treatment group utilized the center-based education, child care and family
+\noindent Only the treatment group utilized the center-based childcare and family
 services provided through ABC. The associated costs include the salaries of center staff, the marginal costs of equipment and facilities, and the associated maintenance costs. \\
 
 \noindent Table \ref{tab:allprogram} shows these costs by the child's age. \\
@@ -31,7 +31,7 @@ services provided through ABC. The associated costs include the salaries of cent
 \begin{table}[H]
 \begin{threeparttable}
 \small
-\caption{Labor and Facilities Rental Costs of ABC Per Treated Child} \label{tab:allprogram}
+\caption{Labor and Facilities Rental Costs of ABC Per Treated Subject} \label{tab:allprogram}
 \centering\begin{tabular}{lccccccc} \hline \hline
 Cost category  & Age 1 & Age 2 & Age 3 & Age 4 & Age 5 & Total\\ \midrule
 \textit{Labor} & & & & & \\  %\midrule  \midrule
@@ -59,7 +59,7 @@ Food  & 280  & 1,133 &1,417 &1,417 &1,417 &5,664\\ %\hline
 \scriptsize
 \begin{tablenotes}
 \item Source: \cite{masse2002benefit}. \\
-\item Note: this table reports the cost per individual for every year of program participation of the treatment group. All amounts are inflated to 2014 USD. Transportation costs refer to the fuel, general maintenance, insurance cost of daily transportation of treated individuals to and from the center. Costs for facilities are rental costs.
+\item Note: This table reports the cost per subject for every year of program participation of the treatment group. All amounts are inflated to 2014 USD. Transportation costs refer to the fuel, general maintenance, insurance cost of daily transportation of treated individuals to and from the center. Costs for facilities are rental costs.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -70,20 +70,20 @@ Food  & 280  & 1,133 &1,417 &1,417 &1,417 &5,664\\ %\hline
 \noindent Medical services were extended to both the treatment and control groups with the
 former receiving much more intensive care. While \cite{Barnett_Masse_2002_benefitcost} do not consider the cost of the medical care provided in ABC, we include the costs associated with the general health care provided to subjects, excluding
 those used for auxiliary research purposes.
-Table \ref{tab:treat-cost} breaks down the medical costs incurred by the average individual in the treatment group in addition to the other costs of the program. \\
+Table \ref{tab:treat-cost} delineates the medical costs incurred by the average subject in the treatment group in addition to the other costs of the program. \\
 
-\noindent Because ABC was one of the first programs to accept cohorts of infants, a great priority was placed on monitoring and evaluating infant health, particularly with respect to contagious respiratory illness. Grants to conduct a medical study made up a significant part of ABC funding. We do not include research costs---which were considerable---in the estimation of the medical costs of ABC. Rather we include costs incurred due to day-to-day care and goods provided to subjects. This includes regular check-ups and tests conducted  by a full-time on-site pediatric fellow and up to two full-time on-site nurses. Children were also monitored daily for signs of illness. For major health issues, children were referred to a local hospital; however, staff were equipped to tend to general health issues and kept some non-prescription medication on hand. \\
+\noindent Because ABC was one of the first programs to accept cohorts of infants, a great priority was placed on monitoring and evaluating infant health, particularly with respect to contagious respiratory illness. Grants to conduct a medical study made up a significant part of ABC funding. We do not include research costs---which were considerable---in the estimation of the medical costs of ABC. Rather we include costs incurred due to day-to-day care and goods provided to subjects. This includes regular check-ups and tests conducted  by a full-time on-site pediatric fellow and up to two full-time on-site nurses. Subjects were also monitored daily for signs of illness. For major health issues, subjects were referred to a local hospital; however, staff were equipped to tend to general health issues and kept some non-prescription medication on hand. \\
 
-\noindent To approximate the average cost of medical care, we use  estimates of the average cost of medical care for infants and children aged 1--4 in the 1970s. \cite{Cutler_Meara_1998_Med-Costs_BOOK} document average national health expenditure as reported by  the 1970 Survey of Health Services  Utilization  and Expenditures and the 1977 National Medical Care Utilization  and Expenditure Survey. These surveys have large samples (of size 11,619 and 38,815, respectively) and measure the use of health services, including hospital admissions and physician visits. From these surveys, we estimate that the upper bounds on cost of medical care for children are \$735 in the first year of life and \$694 for each subsequent year of the program. However, because these costs include cost of health complications, including NICU costs, we refer to \cite{Robinson_etal_1974_FPP} for a more conservative estimate of first-year medical costs. \cite{Robinson_etal_1974_FPP} estimates the cost of six well-child visits provided by government-sponsored health clinics in the first year of life to be \$610 (in 2014 USD). \\
+\noindent To approximate the average cost of medical care, we use  estimates of the average cost of medical care for infants and children 1 year to 4 years old in the 1970s. \cite{Cutler_Meara_1998_Med-Costs_BOOK} document average national health expenditure as reported by  the 1970 Survey of Health Services  Utilization  and Expenditures and the 1977 National Medical Care Utilization  and Expenditure Survey. These surveys have large samples (11,619 and 38,815, respectively) and measure the use of health services, including hospital admissions and physician visits. From these surveys, we estimate that the upper bounds on cost of medical care for subjects are \$735 in the first year of life and \$694 for each subsequent year of the program. However, because these costs include cost of health complications, including NICU costs, we refer to \cite{Robinson_etal_1974_FPP} for a more conservative estimate of first-year medical costs. \cite{Robinson_etal_1974_FPP} estimate the cost of six well-child visits provided by government-sponsored health clinics in the first year of life to be \$610 (2014 USD). \\
 
 \subsection{Staff Salaries}
-\noindent FPGC had rooms for infants, toddlers, and preschool-age children---each differed in typical child-to-staff ratio. Infant nurseries had a ratio of 3:1. Toddler rooms and preschool classrooms had ratios of 4:1.\footnote{Playground and outdoor learning spaces had child-staff ratios of 5:1 and 6:1.} Classroom staff included teachers and teacher aides. Program staff also included administrators, researchers, and support staff (e.g. bus drivers, janitorial, and food preparation staff). We do not include the cost of research staff in our estimations. \\
+\noindent FPGC had rooms for infants, toddlers, and preschool-age children---each with different child-to-staff ratio. Infant nurseries had a ratio of 3:1. Toddler rooms and preschool classrooms had ratios of 4:1.\footnote{Playground and outdoor learning spaces had child-to-staff ratios of 5:1 and 6:1.} Classroom staff included teachers and teacher aides. Program staff also included administrators, researchers, and support staff (e.g. bus drivers, janitorial, and food preparation staff). We do not include the cost of research staff in our estimations. \\
 
-\noindent \cite{Barnett_Masse_2002_benefitcost} used employment and wage documentation from FPGC to estimate costs. We deviate from their calculations in the following ways. Due to lack of documentation of the services provided to ABC participants, we do not include costs of volunteers, consultants, or an on-site social worker. However, we add in costs of support staff including janitorial and food preparation staff estimated from the Quarterly Census of Employment and Wages (1975). \\
+\noindent \cite{Barnett_Masse_2002_benefitcost} used employment and wage documentation from FPGC to estimate costs. We deviate from their calculations in the following ways. Due to lack of documentation of the services provided to ABC subjects, we do not include costs of volunteers, consultants, or an on-site social worker. However, we add in costs of support staff including janitorial and food preparation staff estimated from the Quarterly Census of Employment and Wages (1975). \\
 
 \subsection{Operating and Facilities Costs}
 
-\noindent \cite{Barnett_Masse_2002_benefitcost} estimate rental cost of the facilities from \cite{Helburn_1995_Childcare-Report}, and we assume the same costs. We also assume the same costs for nutrition (two meals and a snack) and transportation. It must be noted that \cite{Barnett_Masse_2002_benefitcost} only consider the cost of food, but we also include the cost of labor associated with food preparation. Transportation costs include fuel, general maintenance, and insurance and are estimated using the fact that the average treated individual lived approximately 3 miles from the center, and an average 6 mile round trip was assumed for each individual (only treated individuals were transported to the center). Though FPGC owned two vans to transport children, we do not include the fixed cost of purchasing vans. \\
+\noindent \cite{Barnett_Masse_2002_benefitcost} estimate rental cost of the facilities from \cite{Helburn_1995_Childcare-Report}, and we assume the same costs. We also assume the same costs for nutrition (two meals and a snack everyday) and transportation. While \cite{Barnett_Masse_2002_benefitcost} only consider the cost of food, we also include the cost of labor associated with food preparation. Transportation costs include fuel, general maintenance, and insurance and are estimated using the fact that the average treated subject lived approximately 3 miles from the center, and an average 6 mile round trip was assumed for each subject (only treated subjects were transported to the center). Though FPGC owned two vans to transport subjects, we do not include the fixed cost of purchasing the vans. \\
 
 \noindent Supplies used between 1980 and 1984, after the implementation of the actual study, were used to approximate the cost of equipment and supplies.\footnote{\citet{Barnett_Masse_2002_benefitcost}.} We supplement this with \cite{FPGC_Progress-Report_1973}, which provides detailed inventory and was published at the time of study  implementation, to refine these costs. Moreover, we predict the cost of curricular materials used in the program. \\
 
