anna edits for appendix H

--- a/AppOutput/Education/educosts_app.tex
+++ b/AppOutput/Education/educosts_app.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{C{3.5cm} C{1.5cm} C{1.5cm} C{2cm} C{6.5cm}}
-\hline \hline
-Schooling level & Ages & Duration (Years) & Yearly Cost &Attainment \& Notes\\ \hline
+\toprule
+Schooling level & Ages & Duration (Years) & Yearly Cost &Attainment \& Notes\\ \midrule
 K-11 & 6-16 & 10 &   \$9,113  & All subjects. Only 1 control individual dropped out before completing 9th grade; we assume completion up to 8th grade. \\
 Grade 12 & 17-18 & 2 &  \$9,113  & Counted only for subjects who completed high school, 29:38 (control:treatment).\\ \\
 GED (Started) & 19 & .5 &  \$155& GED is considered a one year program. No subjects identified as having starting a GED program without finishing.\\ \\
@@ -17,5 +17,5 @@ Graduate School (Started) & 23 & 1 &  \$9,704& Assume dropouts drop out at the e
  \midrule
  Grade Retention& NA & 1 &\$9,113 & \\ \\
  Special Ed.& NA & 1 &  \$11,705  & \\ 
- \hline \hline 
+ \bottomrule
  \end{tabular}
