almost.done.with.crime.section...

--- a/AppOutput/Crime/reg2_black_0.tex
+++ b/AppOutput/Crime/reg2_black_0.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lccccccccccc}
-\hline\hline \noalign{\smallskip} & Miscellaneous & Fraud & Larceny & Vandalism & Auto Theft & Burglary & Robbery & Arson & Assault & Rape & Murder\\
-\noalign{\smallskip}\hline \noalign{\smallskip}Miscellaneous & 0.103 & -0.029 & 0.009 & 0.001 & 0.001 & 0.001 & 0.000 & -0.000 & 0.002 & -0.000 & -0.001\\
+\toprule \noalign{\smallskip} & Miscellaneous & Fraud & Larceny & Vandalism & Auto Theft & Burglary & Robbery & Arson & Assault & Rape & Murder\\
+\noalign{\smallskip}\midrule \noalign{\smallskip}Miscellaneous & 0.103 & -0.029 & 0.009 & 0.001 & 0.001 & 0.001 & 0.000 & -0.000 & 0.002 & -0.000 & -0.001\\
  & \begin{footnotesize}(27.71)**\end{footnotesize} & \begin{footnotesize}(5.90)**\end{footnotesize} & \begin{footnotesize}(6.00)**\end{footnotesize} & \begin{footnotesize}(3.88)**\end{footnotesize} & \begin{footnotesize}(5.18)**\end{footnotesize} & \begin{footnotesize}(2.25)*\end{footnotesize} & \begin{footnotesize}(1.91)\end{footnotesize} & \begin{footnotesize}(0.62)\end{footnotesize} & \begin{footnotesize}(3.16)**\end{footnotesize} & \begin{footnotesize}(1.27)\end{footnotesize} & \begin{footnotesize}(2.85)**\end{footnotesize}\\
 \noalign{\smallskip}Fraud & -0.047 & 0.104 & 0.003 & -0.000 & 0.000 & 0.000 & 0.000 & 0.000 & -0.001 & -0.000 & -0.000\\
  & \begin{footnotesize}(21.71)**\end{footnotesize} & \begin{footnotesize}(36.61)**\end{footnotesize} & \begin{footnotesize}(3.81)**\end{footnotesize} & \begin{footnotesize}(2.31)*\end{footnotesize} & \begin{footnotesize}(0.60)\end{footnotesize} & \begin{footnotesize}(2.02)*\end{footnotesize} & \begin{footnotesize}(0.02)\end{footnotesize} & \begin{footnotesize}(1.76)\end{footnotesize} & \begin{footnotesize}(1.48)\end{footnotesize} & \begin{footnotesize}(0.75)\end{footnotesize} & \begin{footnotesize}(1.72)\end{footnotesize}\\
@@ -26,4 +26,4 @@
  & \begin{footnotesize}(13.39)**\end{footnotesize} & \begin{footnotesize}(39.01)**\end{footnotesize} & \begin{footnotesize}(19.54)**\end{footnotesize} & \begin{footnotesize}(10.27)**\end{footnotesize} & \begin{footnotesize}(2.76)**\end{footnotesize} & \begin{footnotesize}(3.17)**\end{footnotesize} & \begin{footnotesize}(4.80)**\end{footnotesize} & \begin{footnotesize}(3.52)**\end{footnotesize} & \begin{footnotesize}(23.81)**\end{footnotesize} & \begin{footnotesize}(3.38)**\end{footnotesize} & \begin{footnotesize}(12.90)**\end{footnotesize}\\
 \noalign{\smallskip}$R^2$ & 0.02 & 0.02 & 0.07 & 0.00 & 0.01 & 0.01 & 0.01 & 0.00 & 0.01 & 0.00 & 0.00\\
 $N$ & 63,515 & 63,515 & 63,515 & 63,515 & 63,515 & 63,515 & 63,515 & 63,515 & 63,515 & 63,515 & 63,515\\
-\noalign{\smallskip}\hline\hline\end{tabular}
+\noalign{\smallskip}\bottomrule\end{tabular}
