--- a/AppOutput/Crime/reg2_black_1.tex
+++ b/AppOutput/Crime/reg2_black_1.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lccccccccccc}
-\hline\hline \noalign{\smallskip} & Miscellaneous & Fraud & Larceny & Vandalism & Auto Theft & Burglary & Robbery & Arson & Assault & Rape & Murder\\
-\noalign{\smallskip}\hline \noalign{\smallskip}Miscellaneous & 0.095 & -0.002 & 0.004 & 0.000 & 0.001 & 0.001 & 0.000 & -0.000 & 0.005 & -0.001 & -0.001\\
+\toprule \noalign{\smallskip} & Miscellaneous & Fraud & Larceny & Vandalism & Auto Theft & Burglary & Robbery & Arson & Assault & Rape & Murder\\
+\noalign{\smallskip}\midrule \noalign{\smallskip}Miscellaneous & 0.095 & -0.002 & 0.004 & 0.000 & 0.001 & 0.001 & 0.000 & -0.000 & 0.005 & -0.001 & -0.001\\
  & \begin{footnotesize}(73.29)**\end{footnotesize} & \begin{footnotesize}(2.13)*\end{footnotesize} & \begin{footnotesize}(8.97)**\end{footnotesize} & \begin{footnotesize}(2.71)**\end{footnotesize} & \begin{footnotesize}(6.47)**\end{footnotesize} & \begin{footnotesize}(5.87)**\end{footnotesize} & \begin{footnotesize}(1.50)\end{footnotesize} & \begin{footnotesize}(0.12)\end{footnotesize} & \begin{footnotesize}(14.73)**\end{footnotesize} & \begin{footnotesize}(3.28)**\end{footnotesize} & \begin{footnotesize}(5.83)**\end{footnotesize}\\
 \noalign{\smallskip}Fraud & -0.025 & 0.107 & 0.007 & 0.000 & 0.001 & 0.002 & 0.001 & -0.000 & -0.000 & -0.000 & -0.000\\
  & \begin{footnotesize}(13.76)**\end{footnotesize} & \begin{footnotesize}(67.23)**\end{footnotesize} & \begin{footnotesize}(11.68)**\end{footnotesize} & \begin{footnotesize}(0.47)\end{footnotesize} & \begin{footnotesize}(3.44)**\end{footnotesize} & \begin{footnotesize}(5.27)**\end{footnotesize} & \begin{footnotesize}(2.53)*\end{footnotesize} & \begin{footnotesize}(0.61)\end{footnotesize} & \begin{footnotesize}(0.34)\end{footnotesize} & \begin{footnotesize}(0.35)\end{footnotesize} & \begin{footnotesize}(1.96)*\end{footnotesize}\\
@@ -26,4 +26,4 @@
  & \begin{footnotesize}(69.25)**\end{footnotesize} & \begin{footnotesize}(45.55)**\end{footnotesize} & \begin{footnotesize}(29.74)**\end{footnotesize} & \begin{footnotesize}(18.57)**\end{footnotesize} & \begin{footnotesize}(10.95)**\end{footnotesize} & \begin{footnotesize}(19.97)**\end{footnotesize} & \begin{footnotesize}(17.78)**\end{footnotesize} & \begin{footnotesize}(9.22)**\end{footnotesize} & \begin{footnotesize}(55.54)**\end{footnotesize} & \begin{footnotesize}(24.70)**\end{footnotesize} & \begin{footnotesize}(27.76)**\end{footnotesize}\\
 \noalign{\smallskip}$R^2$ & 0.03 & 0.02 & 0.05 & 0.01 & 0.01 & 0.02 & 0.01 & 0.00 & 0.02 & 0.00 & 0.00\\
 $N$ & 230,706 & 230,706 & 230,706 & 230,706 & 230,706 & 230,706 & 230,706 & 230,706 & 230,706 & 230,706 & 230,706\\
-\noalign{\smallskip}\hline\hline\end{tabular}
+\noalign{\smallskip}\bottomrule \end{tabular}
