--- a/AppOutput/Crime/reg3_black_0.tex
+++ b/AppOutput/Crime/reg3_black_0.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lccccccccccc}
-\hline\hline \noalign{\smallskip} & Miscellaneous & Fraud & Larceny & Vandalism & Auto Theft & Burglary & Robbery & Arson & Assault & Rape & Murder\\
-\noalign{\smallskip}\hline \noalign{\smallskip}Miscellaneous & 0.020 & -0.006 & -0.001 & 0.000 & 0.000 & 0.000 & -0.000 & 0.000 & 0.001 & 0.000 & -0.001\\
+\toprule \noalign{\smallskip} & Miscellaneous & Fraud & Larceny & Vandalism & Auto Theft & Burglary & Robbery & Arson & Assault & Rape & Murder\\
+\noalign{\smallskip}\midrule \noalign{\smallskip}Miscellaneous & 0.020 & -0.006 & -0.001 & 0.000 & 0.000 & 0.000 & -0.000 & 0.000 & 0.001 & 0.000 & -0.001\\
  & \begin{footnotesize}(4.33)**\end{footnotesize} & \begin{footnotesize}(5.18)**\end{footnotesize} & \begin{footnotesize}(0.85)\end{footnotesize} & \begin{footnotesize}(0.78)\end{footnotesize} & \begin{footnotesize}(0.46)\end{footnotesize} & \begin{footnotesize}(1.29)\end{footnotesize} & \begin{footnotesize}(0.11)\end{footnotesize} & \begin{footnotesize}(0.84)\end{footnotesize} & \begin{footnotesize}(0.64)\end{footnotesize} & \begin{footnotesize}(3.66)**\end{footnotesize} & \begin{footnotesize}(2.65)**\end{footnotesize}\\
 \noalign{\smallskip}Fraud & 0.046 & 0.003 & 0.002 & 0.000 & 0.001 & -0.000 & 0.000 & -0.000 & -0.000 & 0.000 & -0.000\\
  & \begin{footnotesize}(19.30)**\end{footnotesize} & \begin{footnotesize}(4.41)**\end{footnotesize} & \begin{footnotesize}(2.86)**\end{footnotesize} & \begin{footnotesize}(1.50)\end{footnotesize} & \begin{footnotesize}(4.86)**\end{footnotesize} & \begin{footnotesize}(0.56)\end{footnotesize} & \begin{footnotesize}(1.62)\end{footnotesize} & \begin{footnotesize}(0.62)\end{footnotesize} & \begin{footnotesize}(1.13)\end{footnotesize} & \begin{footnotesize}(2.50)*\end{footnotesize} & \begin{footnotesize}(0.44)\end{footnotesize}\\
@@ -26,4 +26,4 @@
  & \begin{footnotesize}(53.09)**\end{footnotesize} & \begin{footnotesize}(20.43)**\end{footnotesize} & \begin{footnotesize}(22.75)**\end{footnotesize} & \begin{footnotesize}(10.59)**\end{footnotesize} & \begin{footnotesize}(5.51)**\end{footnotesize} & \begin{footnotesize}(4.90)**\end{footnotesize} & \begin{footnotesize}(4.93)**\end{footnotesize} & \begin{footnotesize}(4.52)**\end{footnotesize} & \begin{footnotesize}(22.64)**\end{footnotesize} & \begin{footnotesize}(0.48)\end{footnotesize} & \begin{footnotesize}(11.16)**\end{footnotesize}\\
 \noalign{\smallskip}$R^2$ & 0.01 & 0.00 & 0.04 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00\\
 $N$ & 49,738 & 49,738 & 49,738 & 49,738 & 49,738 & 49,738 & 49,738 & 49,738 & 49,738 & 49,738 & 49,738\\
-\noalign{\smallskip}\hline\hline\end{tabular}
+\noalign{\smallskip}\bottomrule\end{tabular}
