--- a/AppOutput/Crime/reg3_black_1.tex
+++ b/AppOutput/Crime/reg3_black_1.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lccccccccccc}
-\hline\hline \noalign{\smallskip} & Miscellaneous & Fraud & Larceny & Vandalism & Auto Theft & Burglary & Robbery & Arson & Assault & Rape & Murder\\
-\noalign{\smallskip}\hline \noalign{\smallskip}Miscellaneous & 0.065 & -0.002 & 0.003 & 0.001 & 0.001 & 0.001 & -0.000 & 0.000 & 0.003 & -0.000 & -0.001\\
+\toprule \noalign{\smallskip} & Miscellaneous & Fraud & Larceny & Vandalism & Auto Theft & Burglary & Robbery & Arson & Assault & Rape & Murder\\
+\noalign{\smallskip}\midrule \noalign{\smallskip}Miscellaneous & 0.065 & -0.002 & 0.003 & 0.001 & 0.001 & 0.001 & -0.000 & 0.000 & 0.003 & -0.000 & -0.001\\
  & \begin{footnotesize}(40.59)**\end{footnotesize} & \begin{footnotesize}(4.98)**\end{footnotesize} & \begin{footnotesize}(6.29)**\end{footnotesize} & \begin{footnotesize}(4.35)**\end{footnotesize} & \begin{footnotesize}(4.68)**\end{footnotesize} & \begin{footnotesize}(3.18)**\end{footnotesize} & \begin{footnotesize}(2.61)**\end{footnotesize} & \begin{footnotesize}(0.25)\end{footnotesize} & \begin{footnotesize}(7.80)**\end{footnotesize} & \begin{footnotesize}(2.60)**\end{footnotesize} & \begin{footnotesize}(6.70)**\end{footnotesize}\\
 \noalign{\smallskip}Fraud & 0.032 & 0.009 & 0.004 & -0.000 & 0.001 & 0.002 & 0.000 & -0.000 & 0.000 & -0.000 & -0.000\\
  & \begin{footnotesize}(16.63)**\end{footnotesize} & \begin{footnotesize}(18.85)**\end{footnotesize} & \begin{footnotesize}(6.51)**\end{footnotesize} & \begin{footnotesize}(0.72)\end{footnotesize} & \begin{footnotesize}(5.79)**\end{footnotesize} & \begin{footnotesize}(5.19)**\end{footnotesize} & \begin{footnotesize}(2.29)*\end{footnotesize} & \begin{footnotesize}(0.83)\end{footnotesize} & \begin{footnotesize}(0.84)\end{footnotesize} & \begin{footnotesize}(1.28)\end{footnotesize} & \begin{footnotesize}(0.78)\end{footnotesize}\\
@@ -26,4 +26,4 @@
  & \begin{footnotesize}(104.31)**\end{footnotesize} & \begin{footnotesize}(21.78)**\end{footnotesize} & \begin{footnotesize}(31.87)**\end{footnotesize} & \begin{footnotesize}(17.23)**\end{footnotesize} & \begin{footnotesize}(12.30)**\end{footnotesize} & \begin{footnotesize}(20.05)**\end{footnotesize} & \begin{footnotesize}(15.95)**\end{footnotesize} & \begin{footnotesize}(8.16)**\end{footnotesize} & \begin{footnotesize}(54.59)**\end{footnotesize} & \begin{footnotesize}(18.92)**\end{footnotesize} & \begin{footnotesize}(24.05)**\end{footnotesize}\\
 \noalign{\smallskip}$R^2$ & 0.02 & 0.00 & 0.02 & 0.00 & 0.00 & 0.01 & 0.00 & 0.00 & 0.01 & 0.00 & 0.00\\
 $N$ & 188,556 & 188,556 & 188,556 & 188,556 & 188,556 & 188,556 & 188,556 & 188,556 & 188,556 & 188,556 & 188,556\\
-\noalign{\smallskip}\hline\hline\end{tabular}
+\noalign{\smallskip}\bottomrule\end{tabular}
