--- a/AppOutput/Crime/reg4_black_1.tex
+++ b/AppOutput/Crime/reg4_black_1.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lccccccccccc}
-\hline\hline \noalign{\smallskip} & Miscellaneous & Fraud & Larceny & Vandalism & Auto Theft & Burglary & Robbery & Arson & Assault & Rape & Murder\\
-\noalign{\smallskip}\hline \noalign{\smallskip}Miscellaneous & 0.037 & 0.000 & 0.003 & 0.000 & 0.000 & 0.001 & 0.000 & -0.000 & 0.001 & -0.001 & -0.001\\
+\toprule \noalign{\smallskip} & Miscellaneous & Fraud & Larceny & Vandalism & Auto Theft & Burglary & Robbery & Arson & Assault & Rape & Murder\\
+\noalign{\smallskip}\midrule \noalign{\smallskip}Miscellaneous & 0.037 & 0.000 & 0.003 & 0.000 & 0.000 & 0.001 & 0.000 & -0.000 & 0.001 & -0.001 & -0.001\\
  & \begin{footnotesize}(19.83)**\end{footnotesize} & \begin{footnotesize}\end{footnotesize} & \begin{footnotesize}(4.07)**\end{footnotesize} & \begin{footnotesize}(2.77)**\end{footnotesize} & \begin{footnotesize}(1.77)\end{footnotesize} & \begin{footnotesize}(2.02)*\end{footnotesize} & \begin{footnotesize}(0.64)\end{footnotesize} & \begin{footnotesize}(0.23)\end{footnotesize} & \begin{footnotesize}(2.40)*\end{footnotesize} & \begin{footnotesize}(3.15)**\end{footnotesize} & \begin{footnotesize}(4.97)**\end{footnotesize}\\
 \noalign{\smallskip}Fraud & 0.020 & 0.000 & 0.005 & -0.000 & 0.000 & 0.002 & -0.000 & 0.000 & -0.000 & 0.000 & -0.000\\
  & \begin{footnotesize}(10.46)**\end{footnotesize} & \begin{footnotesize}\end{footnotesize} & \begin{footnotesize}(8.12)**\end{footnotesize} & \begin{footnotesize}(0.04)\end{footnotesize} & \begin{footnotesize}(1.44)\end{footnotesize} & \begin{footnotesize}(5.94)**\end{footnotesize} & \begin{footnotesize}(0.68)\end{footnotesize} & \begin{footnotesize}(0.97)\end{footnotesize} & \begin{footnotesize}(0.34)\end{footnotesize} & \begin{footnotesize}(0.05)\end{footnotesize} & \begin{footnotesize}(1.14)\end{footnotesize}\\
@@ -26,4 +26,4 @@
  & \begin{footnotesize}(103.46)**\end{footnotesize} & \begin{footnotesize}\end{footnotesize} & \begin{footnotesize}(25.22)**\end{footnotesize} & \begin{footnotesize}(14.03)**\end{footnotesize} & \begin{footnotesize}(10.92)**\end{footnotesize} & \begin{footnotesize}(16.47)**\end{footnotesize} & \begin{footnotesize}(10.00)**\end{footnotesize} & \begin{footnotesize}(7.13)**\end{footnotesize} & \begin{footnotesize}(48.64)**\end{footnotesize} & \begin{footnotesize}(16.51)**\end{footnotesize} & \begin{footnotesize}(21.79)**\end{footnotesize}\\
 \noalign{\smallskip}$R^2$ & 0.01 & . & 0.01 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00\\
 $N$ & 147,478 & 147,478 & 147,478 & 147,478 & 147,478 & 147,478 & 147,478 & 147,478 & 147,478 & 147,478 & 147,478\\
-\noalign{\smallskip}\hline\hline\end{tabular}
+\noalign{\smallskip}\bottomrule\end{tabular}
