--- a/AppOutput/Crime/reg4_black_0.tex
+++ b/AppOutput/Crime/reg4_black_0.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lccccccccccc}
-\hline\hline \noalign{\smallskip} & Miscellaneous & Fraud & Larceny & Vandalism & Auto Theft & Burglary & Robbery & Arson & Assault & Rape & Murder\\
-\noalign{\smallskip}\hline \noalign{\smallskip}Miscellaneous & -0.009 & 0.000 & -0.003 & -0.001 & -0.000 & -0.000 & -0.000 & -0.000 & -0.001 & -0.000 & -0.001\\
+\toprule \noalign{\smallskip} & Miscellaneous & Fraud & Larceny & Vandalism & Auto Theft & Burglary & Robbery & Arson & Assault & Rape & Murder\\
+\noalign{\smallskip}\midrule\noalign{\smallskip}Miscellaneous & -0.009 & 0.000 & -0.003 & -0.001 & -0.000 & -0.000 & -0.000 & -0.000 & -0.001 & -0.000 & -0.001\\
  & \begin{footnotesize}(1.75)\end{footnotesize} & \begin{footnotesize}\end{footnotesize} & \begin{footnotesize}(1.41)\end{footnotesize} & \begin{footnotesize}(1.98)*\end{footnotesize} & \begin{footnotesize}(0.48)\end{footnotesize} & \begin{footnotesize}(0.16)\end{footnotesize} & \begin{footnotesize}(0.58)\end{footnotesize} & \begin{footnotesize}(1.11)\end{footnotesize} & \begin{footnotesize}(0.70)\end{footnotesize} & \begin{footnotesize}(0.36)\end{footnotesize} & \begin{footnotesize}(1.71)\end{footnotesize}\\
 \noalign{\smallskip}Fraud & 0.012 & 0.000 & 0.000 & 0.000 & -0.000 & 0.000 & -0.000 & -0.000 & -0.001 & -0.000 & -0.000\\
  & \begin{footnotesize}(5.55)**\end{footnotesize} & \begin{footnotesize}\end{footnotesize} & \begin{footnotesize}(0.36)\end{footnotesize} & \begin{footnotesize}(1.63)\end{footnotesize} & \begin{footnotesize}(0.23)\end{footnotesize} & \begin{footnotesize}(0.07)\end{footnotesize} & \begin{footnotesize}(0.44)\end{footnotesize} & \begin{footnotesize}(0.56)\end{footnotesize} & \begin{footnotesize}(2.18)*\end{footnotesize} & \begin{footnotesize}(0.13)\end{footnotesize} & \begin{footnotesize}(0.76)\end{footnotesize}\\
@@ -26,4 +26,4 @@
  & \begin{footnotesize}(54.62)**\end{footnotesize} & \begin{footnotesize}\end{footnotesize} & \begin{footnotesize}(20.07)**\end{footnotesize} & \begin{footnotesize}(7.64)**\end{footnotesize} & \begin{footnotesize}(4.01)**\end{footnotesize} & \begin{footnotesize}(4.65)**\end{footnotesize} & \begin{footnotesize}(3.15)**\end{footnotesize} & \begin{footnotesize}(4.38)**\end{footnotesize} & \begin{footnotesize}(18.65)**\end{footnotesize} & \begin{footnotesize}(1.12)\end{footnotesize} & \begin{footnotesize}(8.69)**\end{footnotesize}\\
 \noalign{\smallskip}$R^2$ & 0.00 & . & 0.01 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00\\
 $N$ & 35,432 & 35,432 & 35,432 & 35,432 & 35,432 & 35,432 & 35,432 & 35,432 & 35,432 & 35,432 & 35,432\\
-\noalign{\smallskip}\hline\hline\end{tabular}
+\noalign{\smallskip}\bottomrule\end{tabular}
